--- a/index.html
+++ b/index.html
@@ -92,16 +92,29 @@
                     </div>
                 </div>
                 <div class="tab-content" id="updates">
-                    Conteudo Fotos
+                    <p>Produção de fotos para disciplina de Fotojornalismo 1 e 2.</p>
                 </div>
                 <div class="tab-content" id="events">
-                    Conteudo Videos
+                    <p>Vídeos produzidos para as disciplinas de Linguagem Jornalística e Sentidos 2, Introdução ao Telejornalismo, Edição em Áudio e Vídeo, Técnicas de produção de imagem e Fotojornalismo 1.</p>
+                    <div class="videos">
+                        <iframe width="480" height="270" src="https://www.youtube.com/embed/GKLo_F0EKbI?si=EhX-VGZAq4vf7wjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="480" height="270" src="https://www.youtube.com/embed/Bi24b1E8l40?si=MFigmrK4bYW1Kzhv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="480" height="270" src="https://www.youtube.com/embed/14HxS2PR69E?si=NZi1sXKM64SngU0N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="480" height="270" src="https://www.youtube.com/embed/IrPpK2NMJXM?si=3u8DJA4iWn_G2Q6V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="480" height="270" src="https://www.youtube.com/embed/mxgc-NSL8ow?si=1ClyBhVLriKhrLKZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="480" height="270" src="https://www.youtube.com/embed/xT_9LovIz6Q?si=fEmHUbYXfvzdxTYn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    
                 </div>
                 <div class="tab-content" id="blog">
                     Conteudo Rádio
                 </div>
             </div>
         </div>
+    </section>
+    <section class="contato">
+        <h3>Contato</h3>
+        <p>ester.peixoto.souza@uel.br</p>
     </section>
     <script>
         const tabs = document.querySelectorAll('.tab-btn');
