--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
                 </div>
                 <div class="tab-content" id="updates">
                     <p>Produção de fotos para disciplina de Fotojornalismo 1 e 2.</p>
+                    <div class="fotojornalismo">
+                        <img src="IMG_5001.JPG" alt="">
+                        <img src="IMG_5002.JPG" alt="">
+                        <img src="IMG_5018.JPG" alt="">
+
+                        <img src="esterpeixoto_31122024 (27).JPG" alt="">
+                        <img src="esterpeixoto_31122024 (30).JPG" alt="">
+                        <img src="esterpeixoto_31122024 (32).JPG" alt="">
+
+                        <img src="esterpeixoto_31122024 (7).JPG" alt="">
+                        <img src="esterpeixoto_31122024 (4).JPG" alt="">
+                        <img src="esterpeixoto_31122024 (3).JPG" alt="">
+                    </div>
                 </div>
                 <div class="tab-content" id="events">
                     <p>Vídeos produzidos para as disciplinas de Linguagem Jornalística e Sentidos 2, Introdução ao Telejornalismo, Edição em Áudio e Vídeo, Técnicas de produção de imagem e Fotojornalismo 1.</p>
@@ -107,7 +120,26 @@
                     
                 </div>
                 <div class="tab-content" id="blog">
-                    Conteudo Rádio
+                    <div class="audio">
+                        <img src="ciranda.jpg" alt="">
+                        Projeto Ciranda da Cultura
+                        <br>
+                        <br>
+                        <audio controls>
+                            <source src="ciranda-da-cultura.mp3" type="audio/mpeg">
+                            Seu navegador não suporta o elemento de áudio.
+                        </audio>
+                    </div>
+                    <div class="audio">
+                        <img src="conexao.jpg" alt="">
+                        Conexão Noturna
+                        <br>
+                        <br>
+                        <audio controls>
+                            <source src="conexao-noturna.mp3" type="audio/mpeg">
+                            Seu navegador não suporta o elemento de áudio.
+                        </audio>
+                    </div>
                 </div>
             </div>
         </div>
