--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Fotos
                 </button>
                 <button class="tab-btn" content-id="events">
-                    Videos
+                    Vídeos
                 </button>
                 <button class="tab-btn" content-id="blog">
                     Rádio
