--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p>Mineira do norte de Minas. Graduada em Tecnologia em Gestão de Recursos Humanos. Cursando MBA em Desenvolvimento de pessoas. Estudante de Jornalismo na Universidade Estadual de Londrina. Escritora do livro Criticando, Atrito Arte, 2019. Participação no livro A língua quando poema, Baderna, 2022.</p>
             <p>Desde pequena sempre fui apaixonada pela arte e comunicação. Ingressei no curso de jornalismo com o sonho de trabalhar em Tv, também me identifico com rádio, captação de imagens e escrita.</p>
         </div>
+        <img src="capas.png" alt="">
     </section>
     <section class="port">
         <div class="portifolio">
