--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                     <p>Vídeos produzidos para as disciplinas de Linguagem Jornalística e Sentidos 2, Introdução ao Telejornalismo, Edição em Áudio e Vídeo, Técnicas de produção de imagem, Fotojornalismo 1 e Produção em Telejornalismo. </p>
                     <div class="videos-shorts">
                         <video controls width="380px">
-                            <source src="Ester Peixoto 06_04 - Stand Biodiversidade.mp4">                            
+                            <source src="http://gustavopadial.com.br/videos/Ester Peixoto 06_04 - Stand Biodiversidade.mp4">                            
                         </video>
                         <video controls width="380px">
-                            <source src="Ester Peixoto e Nicoli Taconi 13_04.mp4">                            
+                            <source src="http://gustavopadial.com.br/videos/Ester Peixoto e Nicoli Taconi 13_04.mp4">                            
                         </video>
                     </div>
                     <hr>
